<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.james.powerstripapp">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input"
        android:orientation="horizontal">

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"
            android:text="@string/send" />

        <Button
            android:id="@+id/read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/read" />
    </LinearLayout>

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttons"
        android:maxLines="5000"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_below="@+id/log"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/button1Text"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="75dp"

        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="25dp"
        android:text="@string/button2Text"
        />
</RelativeLayout>